@@ -1,0 +1,5 @@
+$NetBSD: distinfo,v 1.1.1.1 2007/06/10 13:48:23 abs Exp $
+
+SHA1 (Rose-DB-Object-0.764.tar.gz) = 08145812f6f78e445bf969d772bade89c24212c7
+RMD160 (Rose-DB-Object-0.764.tar.gz) = 53cec918ccad588a5cc075fa9d14465ada40b4b8
+Size (Rose-DB-Object-0.764.tar.gz) = 483035 bytes
